--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -16,22 +16,22 @@
     <ion-grid>
         <ion-row>
             <ion-col>
-                <ion-button expand="full" (click)="simpleNotif()">Generate</ion-button>
+                <ion-button expand="full" (click)="pushNotification()">Generate</ion-button>
             </ion-col>
         </ion-row>
     </ion-grid>
 
 
-    <ion-grid>
-        <ion-row>
-            <ion-col size="12">
-                <ion-item>
-                    <ion-label position="floating">Seleccione fecha </ion-label>
-                    <ion-input readonly [(ngModel)]="mydate" (ionChange)="onChangeDate()" [liIonic4Datepicker]="datePickerObj"></ion-input>
-                </ion-item>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+    <!-- <ion-grid>
+            <ion-row>
+                <ion-col size="12">
+                    <ion-item>
+                        <ion-label position="floating">Seleccione fecha </ion-label>
+                        <ion-input readonly [(ngModel)]="mydate" (ionChange)="onChangeDate()" [liIonic4Datepicker]="datePickerObj"></ion-input>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+        </ion-grid> -->
     <div class="ion-padding">
         <ion-card color="medium-shade">
             <ion-card-header>
@@ -47,4 +47,10 @@
             </ion-card-content>
         </ion-card>
     </div>
+
+    <ion-item style="cursor: pointer;margin-top:100px;" (click)="onpickupClick()">
+        <ion-icon slot="start" name="locate"></ion-icon>
+        <ion-label position="stacked">Pickup Location</ion-label>
+        <ion-textarea style="margin-top:20px;">{{pickupLocation}}</ion-textarea>
+    </ion-item>
 </ion-content>
